Add network Ollama support with automatic local fallback - Add network Ollama configuration option in setup script - Support 30x faster vision processing with GPU server (2s vs 60s) - Implement automatic fallback to local moondream on network failure - Update AI chatbot to use configurable Ollama host - Use consistent prompt: 'Describe this image. Keep the answer to maximum 1 or 2 sentences.' - Update README with network mode documentation and architecture diagrams

--- a/config/ai-chatbot.ini
+++ b/config/ai-chatbot.ini
@@ -1,3 +1,12 @@
+[ollama]
+# Ollama server configuration
+# Use 'local' for local Ollama server, or 'IP:PORT' for network server (e.g., 192.168.2.170:11434)
+ollama_host = local
+# Vision model to use on network server (if ollama_host is not 'local')
+network_vision_model = moondream
+# Connection timeout for network Ollama (seconds)
+network_timeout = 5
+
 [llm]
 # System prompt for concise answers (robot personality)
 system_prompt = You are a helpful robot. Answer in 1 sentence maximum. Be direct and concise.
