feat(voice): implement unified audio recording with Wake Word & VAD
Complete reimplementation of the voice input system:
- Replaced 'arecord' subprocess with native PyAudio stream buffering
- Implemented unified loop for Wake Word monitoring and Active Recording
- Added VAD (Voice Activity Detection) implementation from scratch
- Added Wake Word cooldown logic to prevent self-triggering
- Updated Display logic for real-time listening feedback

--- a/config/ai-chatbot.ini
+++ b/config/ai-chatbot.ini
@@ -36,3 +36,15 @@ resolution = 640x480
 # Auto-reset conversation after 5 minutes of inactivity
 chat_history_timeout = 300
 max_history_messages = 10
+
+[wake_word]
+# Enable wake word detection (set to true to enable always-listening mode)
+enabled = false
+# Wake word model path (hey_jarvis_v0.1 is temporary, will be replaced with hey_ruby_v1)
+model_path = /usr/share/openwakeword-models/hey_jarvis_v0.1.tflite
+# Detection threshold (0.0-1.0, higher = less sensitive)
+threshold = 0.5
+# Feedback sound on detection
+feedback_sound = /usr/share/sounds/wake.wav
+# Command timeout after wake word (seconds)
+command_timeout = 5
