--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,12 +1,26 @@
 # Python dependencies for AI Chatbot and Button Service
 # Install with: pip3 install --break-system-packages -r requirements.txt
 
-# AI and ML
+# AI Chatbot Dependencies
+configparser
 ollama>=0.1.0
 vosk>=0.3.45
+soundfile
+requests
+Pillow
 
-# GPIO control (requires libgpiod-dev system package)
+# Wake Word Detection
+openwakeword>=0.6.0
+pyaudio
+numpy
+scipy
+
+# Voice Activity Detection (for silence detection)
+webrtcvad>=2.0.10
+
+# GPIO and System
 gpiod>=2.0.0
 
 # Note: System dependencies installed via apt in 01-system-dependencies.sh
 #   - libgpiod-dev (required for gpiod Python package)
+#   - portaudio19-dev (required for pyaudio package)
