fix(wake-word): use .onnx models instead of .tflite
OpenWakeWord uses ONNX Runtime which requires .onnx format models.
Updated setup script and default config to download/use correct format.

--- a/config/ai-chatbot.ini
+++ b/config/ai-chatbot.ini
@@ -41,7 +41,7 @@ max_history_messages = 10
 # Enable wake word detection (set to true to enable always-listening mode)
 enabled = false
 # Wake word model path (hey_jarvis_v0.1 is temporary, will be replaced with hey_ruby_v1)
-model_path = /usr/share/openwakeword-models/hey_jarvis_v0.1.tflite
+model_path = /usr/share/openwakeword-models/hey_jarvis_v0.1.onnx
 # Detection threshold (0.0-1.0, higher = less sensitive)
 threshold = 0.5
 # Feedback sound on detection
