--- a/config/ai-chatbot.ini
+++ b/config/ai-chatbot.ini
@@ -4,6 +4,8 @@
 ollama_host = local
 # Vision model to use on network server (if ollama_host is not 'local')
 network_vision_model = moondream
+# Text model to use on network server (if ollama_host is not 'local')
+network_text_model = llama3.2:3b
 # Connection timeout for network Ollama (seconds)
 network_timeout = 5
 
