Voice command improvements: Silero VAD, ring buffer, timeouts, and display fixes
Phase 1-2 implementation of voice command reliability improvements:

AI Chatbot (python/ai-chatbot.py):
- Replace webrtcvad with pysilero-vad for more accurate speech detection
- Add 2-second pre-speech ring buffer to capture audio before wake word
- Add 5-second wake-to-command timeout to prevent stuck recording states
- Add 2-second refractory period between wake word triggers
- Add 2-second cooldown after cleanup to prevent feedback sound loops
- Make wake feedback sound blocking (ensure user hears it before speaking)
- Add _cleanup_recording() and _stop_recording_safe() helper methods
- Integrate webrtc-noise-gain AudioProcessor (disabled by default)
- Fix AudioProcessor API compatibility (positional args)
- Increase silence threshold from 0.8s to 1.5s for better speech capture

Config (config/ai-chatbot.ini):
- Add wake_command_timeout, refractory_seconds, vad_trigger_level options
- Add audio_auto_gain and audio_noise_suppression settings (disabled)
- Update network_vision_model from moondream to qwen3-vl
- Enable wake word by default

QML Display (qml/shatrox-display.qml):
- Fix mic indicator not clearing when file is empty
- Add defaultContent property for proper reset to welcome screen
- Fix typo: SHATROX -> SHATRIX

Startup (scripts-helpers/startup-sound.sh):
- Set speaker volume to 65% on boot

Wake Word Setup (scripts/10-wake-word-setup.sh):
- Replace webrtcvad with pysilero-vad==1.0.0 and webrtc-noise-gain==1.2.3
- Change feedback sound to two-tone chime (523Hz + 659Hz)

Known limitations:
- Audio enhancement disabled (auto_gain=0, noise_suppression=0) due to
  compatibility issues with VOSK transcription
- ~80% voice command success rate (mic quality dependent)

--- a/config/ai-chatbot.ini
+++ b/config/ai-chatbot.ini
@@ -3,7 +3,7 @@
 # Use 'local' for local Ollama server, or 'IP:PORT' for network server (e.g., 192.168.2.170:11434)
 ollama_host = local
 # Vision model to use on network server (if ollama_host is not 'local')
-network_vision_model = moondream
+network_vision_model = qwen3-vl
 # Text model to use on network server (if ollama_host is not 'local')
 network_text_model = llama3.2:3b
 # Connection timeout for network Ollama (seconds)
@@ -41,12 +41,23 @@ max_history_messages = 10
 
 [wake_word]
 # Enable wake word detection (set to true to enable always-listening mode)
-enabled = false
+enabled = true
 # Wake word model path (hey_jarvis_v0.1 is temporary, will be replaced with hey_ruby_v1)
 model_path = /usr/share/openwakeword-models/hey_jarvis_v0.1.onnx
 # Detection threshold (0.0-1.0, higher = less sensitive)
 threshold = 0.5
 # Feedback sound on detection
 feedback_sound = /usr/share/sounds/wake.wav
-# Command timeout after wake word (seconds)
-command_timeout = 5
+# Wake-to-command timeout (seconds to wait for speech after wake word)
+wake_command_timeout = 5
+# Refractory period (seconds before another wake word can trigger)
+refractory_seconds = 2.0
+# VAD trigger level (consecutive speech detections needed)
+vad_trigger_level = 2
+# Seconds of silence to stop recording
+silence_threshold = 1.5
+# Maximum recording time (safety)
+max_recording_time = 10
+# Audio enhancement settings (0 to disable)
+audio_auto_gain = 15
+audio_noise_suppression = 2
